Exp-2/output/hf-eval-data-v3/f00498_get_correct_answer.err
  File "./f00498_get_correct_answer.py", line 38
    summary_text = 'The sky is blue because of the way Earth's atmosphere scatters sunlight.'
                                                             ^
SyntaxError: invalid syntax
